# konachan-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  README_EN.md  Rocket.toml
src/: conf.rs  fairing.rs  guard.rs  lib.rs  main.rs  utils.rs
tests/: api_tests.rs  integration_test.rs
