[package]
authors = ["wxp"]
edition = "2021"
name = "konachan-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json", "blocking", "stream"] }
rocket = { version = "0.5.0", features = ["json"] }
roxmltree = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
xmlparser = "0.13.6"
