[package]
authors = ["wxp"]
edition = "2024"
name = "konachan-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
log = "0.4.29"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
rocket = { version = "0.5.1", features = ["json"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
xmlparser = "0.13.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
